0.0948 2021-04-28
  - remove SPVM::StringUtil->replace_all
  - remove SPVM::StringUtil->chomp_crlf
  - rename SPVM::StringUtil->chomp_lf to SPVM::StringUtil->chompr
  - rename the following SPVM::StringUtil methods
    isalnum to is_alnum
    isalpha to is_alpha
    isalpha to is_alpha
    iscntrl to is_cntrl
    isdigit to is_digit
    isgraph to is_graph
    islower to is_lower
    isprint to is_print
    isprint to is_print
    ispunct to is_punct
    isspace to is_space
    isupper to is_upper
    isxdigit to is_xdigit
    tolower to to_lower
    toupper to to_upper
    strtoi to to_int_with_base
    strtol to to_long_with_base
    strtof to to_float
    strtod to to_double
  - add SPVM::StringUtil->to_int
  - add SPVM::StringUtil->to_long
  
0.0947 2021-04-27
  - array equals methods return 1 if both arrays is undef. return 0 if only one one arrays is undef.
    equals_byte_array
    equals_short_array
    equals_int_array
    equals_long_array
    equals_float_array
    equals_double_array
    equals_string_array
    equals_object_array
  - rename SPVM::ArrayUtil->slice_byte to SPVM::ArrayUtil->copy_array_range_byte
  - rename SPVM::ArrayUtil->slice_short to SPVM::ArrayUtil->copy_array_range_short
  - rename SPVM::ArrayUtil->slice_int to SPVM::ArrayUtil->copy_array_range_int
  - rename SPVM::ArrayUtil->slice_long to SPVM::ArrayUtil->copy_array_range_long
  - rename SPVM::ArrayUtil->slice_float to SPVM::ArrayUtil->copy_array_range_float
  - rename SPVM::ArrayUtil->slice_double to SPVM::ArrayUtil->copy_array_range_double
  - rename SPVM::ArrayUtil->slice_string to SPVM::ArrayUtil->copy_array_range_string
  - rename SPVM::ArrayUtil->slice_object to SPVM::ArrayUtil->copy_array_range_object
  - fix bug that import subroutine is not checked the existance
  - rename SPVM::Sort->sortb to SPVM::Sort->sort_byte
  - rename SPVM::Sort->sorts to SPVM::Sort->sort_short
  - rename SPVM::Sort->sorti to SPVM::Sort->sort_int